--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -118,9 +118,16 @@
     text-align: left;
 }
 .header_content_text_mint{
-    float: left;
     background-color: rgb(112,190,74);
-    font-size: 15px;
-    margin: 4em auto;
-    padding: 2em 4em;
+    width: 20%; 
+    font-size: 16px;
+    margin: 4em auto 4em 0em;
+    padding: 1em 3em;
+    border-radius: 8px;
+}
+.header_content_text_mint:hover{
+    background-color:  black;
+    color: white;
+    transition: color 0.4s ease;
+    transition: background-color 0.4s ease;
 }
