--- a/src/components/state/state.css
+++ b/src/components/state/state.css
@@ -26,3 +26,14 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+@media only screen and (max-width: 600px) {
+    .state_cards{
+        display: flex;
+        flex-direction: column;
+        padding: 0em 5em;
+    }
+    .state_bg{
+        height: 0px;
+        background-image:none;
+    }
+}
