--- a/src/components/utility/utility.css
+++ b/src/components/utility/utility.css
@@ -39,7 +39,6 @@
 }
 .utility_right_bar{
     flex: 5;
-
 }
 .cards_layout1{
     display: flex;
@@ -58,4 +57,51 @@
     top: 50%;
     left: 50%;
     transform: translateX(50%) translateY(80%);
+}
+
+@media only screen and (max-width: 600px) {
+    .utility_section{
+        margin: 0em 3em;
+        min-width: 300px;
+        border: none;
+        display: flex;
+        flex-direction: column;
+    }
+    .utility_left_bar{
+        background-image: url(../../assets/header/utility-left.webp);
+    
+        background-repeat: no-repeat;
+        background-size: contain;
+        text-align: center;
+        color: white;
+        width: 100%;
+        height: auto;
+    }
+    .utility_left_title {
+        padding-top: 1em;
+        line-height: 1.4em;
+        font-size: 30px;
+    }
+    .utility_right_bar{
+        display: flex;
+        flex-direction: column;
+    }
+    .cards_layout1{
+        display: flex;
+        flex-direction: column;
+    
+        position:relative;
+        top: 0%;
+        left: 0%;
+        transform: translateX(0%) translateY(0%);
+    }
+    .cards_layout2{
+        display: flex;
+        flex-direction: column;
+    
+        position:relative;
+        top: 0%;
+        left: 0%;
+        transform: translateX(0%) translateY(0%);
+    }
 }
