--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -60,10 +60,9 @@
 }
 
 .header_button_section{
-    flex: 1;
+    flex: 0;
 
-    display: flex;
-    flex-direction: row;
+    display: none;
 }
 
 .mint_button{
@@ -162,12 +161,13 @@
 
     .header_menu_section{
         display: none;
+        flex: 0;
     }
 
     .header_button_section{
-        flex: 1;
+        flex: 0;
     
-        display: flex;
+        display: none;
     }
     
     .mint_button{
@@ -179,12 +179,16 @@
     }
 
     .logo_img{
+        width: 75px;
         position: absolute;
-        left:40px;
+        left: 50%;
+        margin-left: -38px;
         top:60px;
     }
     .header_content {
         margin-top: 60px;
     }
-
+    .header_titile{
+        margin: auto;
+    }
 }
